# sly_llama

./: README.md  mrkl_agent.py  pyproject.toml  requirements.txt  scratch.py  simple_example.ipynb  simple_example.py  test_mrkl.py
sly_llama/: __init__.py  main.py  models.py
sly_llama/agents/: mrkl.py  mrkl_agent.py
sly_llama/examples/: simple_example.ipynb
test/: sratch.py  test_mrkl.py
