[tool.poetry]
name = "sly-llama"
version = "0.1.0"
description = "turn python functions into llm calls and parse outputs with sly / pydantic"
authors = ["Serge Mosesov <smosesov@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sly_llama"}]

[tool.poetry.dependencies]
python = "3.11.1"
langchain = "^0.0.176"
sly = "^0.5"
openai = "^0.27.7"


[tool.poetry.group.dev.dependencies]
jupytext = "^1.14.5"
ipython = "^8.13.2"
jupyter = "^1.0.0"
ptpython = "^3.0.23"
pylint = "^2.17.4"
black = "^23.3.0"
pynvim = "^0.4.3"
pytest = "^7.3.1"
pudb = "^2022.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

